# sub-rosa-risein

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/web/: .env.example  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  passkey-config.ts  polyfills.ts  vite-env.d.ts
contracts/rise-in-round/: Cargo.toml
contracts/rise-in-round/src/: lib.rs  test.rs
contracts/round/: Cargo.toml
contracts/round/src/: drand.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/round/test_snapshots/test/: commit_after_deadline_rejected.1.json  commit_locks_escrow.1.json  commit_overwrite_before_close_refunds_prior_escrow.1.json  commit_zero_escrow_rejected.1.json  create_round_happy_path.1.json  create_round_rejects_commit_after_reveal.1.json  full_lifecycle_real_drand_signature.1.json  get_bidders_returns_ordered_index.1.json  void_after_grace_refunds_all.1.json  void_before_grace_rejected.1.json
docs/: COMMIT_PLAN.md  CV_LABS_APPLICATION.md  DEMO_SCRIPT.md
scripts/: deploy-testnet.sh
services/agent/: package.json
services/agent/scripts/: agents-e2e.sh  agents-e2e.ts  usdc-setup.ts
services/agent/src/: bidder.test.ts  bidder.ts  index.ts  mandate-cap-negative.test.ts  mandate.test.ts  mandate.ts  write-demo-trace.ts
services/appraisal-api/: package.json
services/appraisal-api/scripts/: usdc-setup.ts  x402-e2e.sh  x402-e2e.ts
services/appraisal-api/src/: appraisal.test.ts  client.ts  (+5 more)
services/drand-tools/: package.json
services/keeper/: package.json
(+65 files in other folders)
